Scrollbar always visible to stop page from popping when navigating

--- a/content/customtheme.scss
+++ b/content/customtheme.scss
@@ -16,6 +16,7 @@ $navbar-height: 53px;
 
 html{
   height: 100%;
+  overflow-y: scroll;
 }
 
 body {
